Fix spacing

--- a/app/styles/components/curriculum-inventory-sequence-block-session-manager.scss
+++ b/app/styles/components/curriculum-inventory-sequence-block-session-manager.scss
@@ -5,6 +5,10 @@
 
   .list {
     table {
+      .count-as-one-header input {
+        margin-right: .5rem;
+      }
+
       @include ilios-table-structure;
       @include ilios-table-colors;
     }
